# zdt

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: dataset.py  trajectories.py
ztt/: config.toml  embed.py  model.py  train.py
